Anne/Concept/test
Last login: Thu Jan  7 08:59:22 on ttys000
MacBook-Pro-van-Anne-Goossens:~ AnneGoossens$ python
Python 2.7.10 (default, Jul 14 2015, 19:46:27) 
[GCC 4.2.1 Compatible Apple LLVM 6.0 (clang-600.0.39)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> s=set(range(1,6))
>>> import random
>>> while lens(s)>0:
... 'nieuws': 'www.nu.nl',
  File "<stdin>", line 2
    'nieuws': 'www.nu.nl',
           ^
IndentationError: expected an indented block
>>>     
... 
>>> Woensdag 09 december 2015
  File "<stdin>", line 1
    Woensdag 09 december 2015
              ^
SyntaxError: invalid token
>>> 
>>> Het laatste nieuws het eerst op NU.nl 
  File "<stdin>", line 1
    Het laatste nieuws het eerst op NU.nl 
              ^
SyntaxError: invalid syntax
>>> Temperatuur 6 °C 
  File "<stdin>", line 1
    Temperatuur 6 °C 
                ^
SyntaxError: invalid syntax
>>> Vervoer 0 Files 2 NS € 1,573 
  File "<stdin>", line 1
    Vervoer 0 Files 2 NS € 1,573 
            ^
SyntaxError: invalid syntax
>>> AEX 440,85 
  File "<stdin>", line 1
    AEX 440,85 
          ^
SyntaxError: invalid syntax
>>> 
>>> Het nieuws 
  File "<stdin>", line 1
    Het nieuws 
             ^
SyntaxError: invalid syntax
>>>     •         1.  1 uur geleden Voor bij het nieuws Dit zijn de conclusies uit het onderzoek naar de Teeven-deal Dit zijn de belangrijkste conclusies uit het onderzoek van de commissie-Oosting naar de zogeheten 'Teeven-deal' uit 2000, die dit voorjaar leidde tot het aftreden van minister Ivo Opstelten en staatssecretaris Fred Teeven van Veiligheid en Justitie.  
  File "<stdin>", line 1
    •	  1.  1 uur geleden Voor bij het nieuws Dit zijn de conclusies uit het onderzoek naar de Teeven-deal Dit zijn de belangrijkste conclusies uit het onderzoek van de commissie-Oosting naar de zogeheten 'Teeven-deal' uit 2000, die dit voorjaar leidde tot het aftreden van minister Ivo Opstelten en staatssecretaris Fred Teeven van Veiligheid en Justitie.  
    ^
IndentationError: unexpected indent
>>>     •         2.  1 uur geleden Voor bij het nieuws Reacties op kritisch onderzoek naar Teeven-deal De onderzoekscommissie-Oosting oordeelde woensdag hard over de zogenaamde Teeven-deal, tussen toenmalig officier van justitie Fred Teeven en drugscrimineel Cees H. in 2000. Dit zijn de reacties op het rapport.  
  File "<stdin>", line 1
    •	  2.  1 uur geleden Voor bij het nieuws Reacties op kritisch onderzoek naar Teeven-deal De onderzoekscommissie-Oosting oordeelde woensdag hard over de zogenaamde Teeven-deal, tussen toenmalig officier van justitie Fred Teeven en drugscrimineel Cees H. in 2000. Dit zijn de reacties op het rapport.  
    ^
IndentationError: unexpected indent
>>>     •         3.  1 uur geleden Voor bij het nieuws Profiel Rabobank: Van boerenleenbanken naar marktleider hypotheken Rabobank schrapt de komende drie jaar nog eens negenduizend voltijdsbanen. Een profiel van het financiële concern.
  File "<stdin>", line 1
    •	  3.  1 uur geleden Voor bij het nieuws Profiel Rabobank: Van boerenleenbanken naar marktleider hypotheken Rabobank schrapt de komende drie jaar nog eens negenduizend voltijdsbanen. Een profiel van het financiële concern.
    ^
IndentationError: unexpected indent
>>> 
